Created v1 file to version the api, edited the readme.txt file and explained how to run the application
