# app.js
@@ -3,15 +3,13 @@
 require('dotenv').config();
 
 const swaggerUi = require('swagger-ui-express');
-const specs = require('./Swagger/swagger'); // Swagger konfigürasyonu dosyanız
 const express = require('express');
 const mongoose = require('mongoose');
-const productRoutes = require('./Routes/ApiRoutes');
+const productRoutes = require('./v1/Routes/ApiRoutes');
 const { errorHandler } = require('./CustomMiddlewares/ErrorHandlingMiddleware');
 const YAML = require('yamljs');
-const swaggerDocument = YAML.load('./swagger/swagger.yml');
+const swaggerDocument = YAML.load('./v1/swagger/swagger.yml');
 const app = express();
-// dotenv ile çevresel değişkenlere erişim
 const port = process.env.PORT
 console.log(port);
 const mongoURI = process.env.MONGODB_URI;
@@ -19,7 +17,7 @@ console.log(mongoURI);
 
 app.use('/swagger', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use(express.json());
-app.use('/Product', productRoutes);
+app.use('/Product/v1', productRoutes);
 app.use(errorHandler);
 
 mongoose.connect(mongoURI) //MongoDB connection
@@ -27,5 +25,5 @@ mongoose.connect(mongoURI) //MongoDB connection
     .catch(err => console.log(err)); //If there is an error
 
 app.listen(port,() => {
-    console.log('Server is running on port 3000');
+    console.log(`Server is running on port ${port}`);
 });
